Bug 157587 - Tabbed UI: Cannot scroll through all Style Preview options with up/down arrow button
Summary: Tabbed UI: Cannot scroll through all Style Preview options with up/down arrow...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 beta1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.3 target:7.6.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Notebookbar-Tabbed Styles-Preview
  Show dependency treegraph
 
Reported: 2023-10-04 05:12 UTC by Kira Tubo
Modified: 2024-04-20 19:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Style Preview on Tabbed UI (30.63 KB, image/png)
2023-10-04 05:13 UTC, Kira Tubo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kira Tubo 2023-10-04 05:12:23 UTC
Description:
With the Tabbed UI, when clicking up/down arrow buttons of Style Preview, not all options are visible

Steps to Reproduce:
1. Open Writer
2. Under View > User Interface, select Tabbed and save
3. Under Home tab, click multiple times on the Down arrow button of the Style Preview area (not expected: last option that displays is "Heading 4")
4. Click "Heading 4"
5. Use Left or Down arrow key on keyboard multiple times (there are more options after "Heading 4")

Actual Results:
User is not able to see all options when clicking the up/down arrow buttons in the Style Preview area. User can only see "Heading 4" as last option. Other options, such as Title, Subtitle, Block Quotation, Preformatted, are not visible.

Expected Results:
User should be able to see all options when clicking the up/down arrow buttons in the Style Preview area. 


Reproducible: Always


User Profile Reset: No

Additional Info:
Reproducible in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dd7fc07f83416a3d8a444947b7d28f7347520d6a
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Not reproducible in:

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 Kira Tubo 2023-10-04 05:13:53 UTC
Created attachment 189992 [details]
Style Preview on Tabbed UI
Comment 2 stragu 2023-10-04 10:54:01 UTC
On Linux, with the gen VCL plugin, the difference between 7.5.7.1 and 7.6.2.1:
- before, clicking the down arrow could navigate to the last style, but the thumb would get stuck in the middle (bug 153521)
- after, the thumb takes the whole space and clicking on the down arrow does nothing.

This change I bibisected with the linux-64-7.6 repo to first bad commit 423ce2ce89b39b1356d32962033f5756f653a47d which points to core commit:

commit 666925f2ab06e690c41c470713dc83f2d752bfb7
author	Caolán McNamara 	Sat Jun 03 15:23:15 2023 +0100
committer	Caolán McNamara 	Sat Jun 03 20:23:28 2023 +0200
perf: use freeze/thaw around block insert of multiple icons
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152577

Assuming that this commit is also the cause of the Windows symptoms Kira described, Caolán, can you please have a look?
Comment 3 Commit Notification 2024-03-31 16:00:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0544fb193b949dbcff97e8c475063dd72583ad1d

Resolves: tdf#157587 IconView scoll range not updated

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2024-03-31 16:01:43 UTC
done in trunk, backport to 24-2 in gerrit
Comment 5 Commit Notification 2024-03-31 18:47:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/57428bfc71762687594c3c0fa62cdff391dda3f9

Resolves: tdf#157587 IconView scoll range not updated

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-04-01 11:39:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/00dabd046b6163adb223a6b3e2827a4a26b491cc

Resolves: tdf#157587 IconView scoll range not updated

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2024-04-15 07:12:41 UTC
Thanks Caolán, verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8b599d60fef80039cdfe636a771c3fc8eb1028c3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Kira, maybe you want to check on Windows too. Thanks!
Comment 8 Kira Tubo 2024-04-20 19:54:18 UTC
(In reply to Caolán Guillou (stragu) from comment #7)
> Kira, maybe you want to check on Windows too. Thanks!

Looks good to me on Windows. Thanks Caolán and Stéphane!

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0957ee9f5d379c80fca4027c187b471118d0490d
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded