Resolves: tdf#157587 IconView scoll range not updated

IconView::SetUpdateMode(true) doesn't update the scroll
range for any changes that might have taken place while
updates were suspended.

The similar SvImpLBox::UpdateAll() for "normal" lists
does this update, so do the equivalent update here too.

Noticeable since:

commit 666925f2ab06e690c41c470713dc83f2d752bfb7
Date:   Sat Jun 3 15:23:15 2023 +0100

    perf: use freeze/thaw around block insert of multiple icons

Change-Id: I318fc4509c6906161eabf3b312f311cb97ac063a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165485
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit 57428bfc71762687594c3c0fa62cdff391dda3f9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165612
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>